NetBSD Problem Report #48997

From t.hash425@gmail.com  Tue Jul 15 15:25:01 2014
Return-Path: <t.hash425@gmail.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 027E7A6552
	for <gnats-bugs@gnats.netbsd.org>; Tue, 15 Jul 2014 15:25:01 +0000 (UTC)
Message-Id: <53C547C8.8010809@gmail.com>
Date: Wed, 16 Jul 2014 00:24:56 +0900
From: Takahiro HAYASHI <t.hash425@gmail.com>
To: gnats-bugs@gnats.NetBSD.org
Subject: changing link-local address of vlan causes panic

>Number:         48997
>Category:       kern
>Synopsis:       changing link-local address of vlan causes panic
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jul 15 15:30:00 +0000 2014
>Closed-Date:    Fri Aug 08 02:19:26 +0000 2014
>Last-Modified:  Fri Aug 08 02:19:26 +0000 2014
>Originator:     Takahiro HAYASHI
>Release:        NetBSD 6.99.47
>Organization:
>Environment:
System: NetBSD  6.99.47 NetBSD 6.99.47 (XHCIDEBUG) #2: Mon Jul 14 02:12:59 JST 2014  root@halt:/build/head/obj.amd64/sys/arch/amd64/compile/XHCIDEBUG amd64
Architecture: x86_64
Machine: amd64
>Description:
	Changing link-local address of vlan causes panic.

	net/if_vlan.c does not have if_init, so link_control() in
	link_proto.c calls ipf->if_init(=NULL) in case of SIOCALIFADDR.

	I don't think it's worth to change LLADDR of vlan interface because
	parent interface cannot receivce packets that are not for it.
	However, the kernel should not panic anyway.

>How-To-Repeat:
	ifconfig vlan0 create
	ifconfig vlan0 vlan 1 vlanif re0
	ifconfig vlan0 link 0:0:0:0:0:1 active

>Fix:
	A) implement vlan_init(), like as if_tap.c does
	B) avoid exec NULL in link_control()

-- 
t-hash

>Release-Note:

>Audit-Trail:
From: "Ryota Ozaki" <ozaki-r@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48997 CVS commit: src/sys/net
Date: Mon, 21 Jul 2014 12:03:38 +0000

 Module Name:	src
 Committed By:	ozaki-r
 Date:		Mon Jul 21 12:03:38 UTC 2014

 Modified Files:
 	src/sys/net: link_proto.c

 Log Message:
 Don't assume if_init is always set

 if_init may be NULL, e.g., if_vlan.

 PR kern/48997


 To generate a diff of this commit:
 cvs rdiff -u -r1.16 -r1.17 src/sys/net/link_proto.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Takahiro HAYASHI <t.hash425@gmail.com>
To: gnats-bugs@NetBSD.org, kern-bug-people@netbsd.org, 
 "Ryota Ozaki" <ozaki-r@netbsd.org>
Cc: 
Subject: Re: PR/48997 CVS commit: src/sys/net
Date: Mon, 21 Jul 2014 22:01:42 +0900

 (07/21/14 21:05), Ryota Ozaki wrote:
 > From: "Ryota Ozaki" <ozaki-r@netbsd.org>
 > To: gnats-bugs@gnats.NetBSD.org
 > Cc:
 > Subject: PR/48997 CVS commit: src/sys/net
 > Date: Mon, 21 Jul 2014 12:03:38 +0000
 >
 >   Module Name:	src
 >   Committed By:	ozaki-r
 >   Date:		Mon Jul 21 12:03:38 UTC 2014
 >
 >   Modified Files:
 >   	src/sys/net: link_proto.c
 >
 >   Log Message:
 >   Don't assume if_init is always set

 Thank you for fix. I confirmed the kernel does not
 panic when I change link address of vlan.

 -- 
 t-hash

State-Changed-From-To: open->pending-pullups
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Tue, 22 Jul 2014 01:30:16 +0000
State-Changed-Why:
Ticket #1103


From: Ryota Ozaki <ozaki-r@NetBSD.org>
To: Takahiro HAYASHI <t.hash425@gmail.com>
Cc: gnats-bugs@netbsd.org, kern-bug-people@netbsd.org
Subject: Re: PR/48997 CVS commit: src/sys/net
Date: Tue, 22 Jul 2014 11:34:39 +0900

 On Mon, Jul 21, 2014 at 10:01 PM, Takahiro HAYASHI <t.hash425@gmail.com> wrote:
 > (07/21/14 21:05), Ryota Ozaki wrote:
 >>
 >> From: "Ryota Ozaki" <ozaki-r@netbsd.org>
 >> To: gnats-bugs@gnats.NetBSD.org
 >> Cc:
 >> Subject: PR/48997 CVS commit: src/sys/net
 >> Date: Mon, 21 Jul 2014 12:03:38 +0000
 >>
 >>   Module Name:  src
 >>   Committed By: ozaki-r
 >>   Date:         Mon Jul 21 12:03:38 UTC 2014
 >>
 >>   Modified Files:
 >>         src/sys/net: link_proto.c
 >>
 >>   Log Message:
 >>   Don't assume if_init is always set
 >
 >
 > Thank you for fix. I confirmed the kernel does not
 > panic when I change link address of vlan.

 Thanks!

 FYI, I'm requesting the fix for pullup-6.
   ozaki-r


 >
 > --
 > t-hash

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48997 CVS commit: [netbsd-6] src/sys/net
Date: Thu, 7 Aug 2014 09:39:56 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Thu Aug  7 09:39:55 UTC 2014

 Modified Files:
 	src/sys/net [netbsd-6]: link_proto.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1103):
 	sys/net/link_proto.c	revision 1.17
 Don't assume if_init is always set. if_init may be NULL, e.g., if_vlan.
 PR kern/48997.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.7.8.1 src/sys/net/link_proto.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48997 CVS commit: [netbsd-6-1] src/sys/net
Date: Thu, 7 Aug 2014 09:50:05 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Thu Aug  7 09:50:05 UTC 2014

 Modified Files:
 	src/sys/net [netbsd-6-1]: link_proto.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1103):
 	sys/net/link_proto.c	revision 1.17
 Don't assume if_init is always set. if_init may be NULL, e.g., if_vlan.
 PR kern/48997.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.7.22.1 src/sys/net/link_proto.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48997 CVS commit: [netbsd-6-0] src/sys/net
Date: Thu, 7 Aug 2014 09:53:29 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Thu Aug  7 09:53:29 UTC 2014

 Modified Files:
 	src/sys/net [netbsd-6-0]: link_proto.c

 Log Message:
 Pull up following revision(s) (requested by ozaki-r in ticket #1103):
 	sys/net/link_proto.c	revision 1.17
 Don't assume if_init is always set. if_init may be NULL, e.g., if_vlan.
 PR kern/48997.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.7.14.1 src/sys/net/link_proto.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: ozaki-r@NetBSD.org
State-Changed-When: Fri, 08 Aug 2014 02:19:26 +0000
State-Changed-Why:
pullup done


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.