Don't assume if_init is always set

if_init may be NULL, e.g., if_vlan.

PR kern/48997