sys/net/link_proto.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: link_proto.c,v 1.16 2014/07/15 20:17:53 joerg Exp $	*/
+/*	$NetBSD: link_proto.c,v 1.17 2014/07/21 12:03:38 ozaki-r Exp $	*/
 
 /*-
  * Copyright (c) 1982, 1986, 1993
@@ -32,7 +32,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: link_proto.c,v 1.16 2014/07/15 20:17:53 joerg Exp $");
+__KERNEL_RCSID(0, "$NetBSD: link_proto.c,v 1.17 2014/07/21 12:03:38 ozaki-r Exp $");
 
 #include <sys/param.h>
 #include <sys/socket.h>
@@ -213,7 +213,8 @@ link_control(struct socket *so, unsigned long cmd, void *data,
 		splx(s);
 		if (error != ENETRESET)
 			return error;
-		else if ((ifp->if_flags & IFF_RUNNING) != 0)
+		else if ((ifp->if_flags & IFF_RUNNING) != 0 &&
+		         ifp->if_init != NULL)
 			return (*ifp->if_init)(ifp);
 		else
 			return 0;
